- added nvmrc - fleshed out types - added oath of moment data strcuture example

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
@@ -23,9 +24,16 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"],
+      "#data/*": ["./app/data/*"],
+      "#assets/*": ["./app/ui/assets/*"],
+      "#components/*": ["./app/ui/components/*"],
+      "#modules/*": ["./app/ui/modules/*"],
+      "#scripts/*": ["./scripts/*"],
+      "#types/*": ["./app/types/*"],
+      "#utils/*": ["./app/ui/utils/*"],
+      "#game-engine": ["./app/engine/bridge/index.ts"],
+      "#game-engine/*": ["./app/engine/bridge/*"]
     }
   },
   "include": [
