--- a/package.json
+++ b/package.json
@@ -12,15 +12,40 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@radix-ui/react-alert-dialog": "^1.1.15",
+        "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-collapsible": "^1.1.12",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-popover": "^1.1.15",
+        "@radix-ui/react-radio-group": "^1.3.8",
+        "@radix-ui/react-slot": "^1.2.4",
+        "@radix-ui/react-tabs": "^1.1.13",
         "@tailwindcss/postcss": "^4.1.18",
         "@types/node": "^25.2.2",
         "@types/react": "^19.2.13",
         "@types/react-dom": "^19.2.3",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.564.0",
         "next": "^16.1.6",
         "postcss": "^8.5.6",
         "react": "^19.2.4",
         "react-dom": "^19.2.4",
+        "react-router-dom": "^7.13.0",
+        "tailwind-merge": "^3.4.1",
         "tailwindcss": "^4.1.18",
+        "tw-animate-css": "^1.4.0",
         "typescript": "^5.9.3"
+    },
+    "imports": {
+        "#data/*": "./app/data/*",
+        "#assets/*": "./app/ui/assets/*",
+        "#components/*": "./app/ui/components/*",
+        "#modules/*": "./app/ui/modules/*",
+        "#scripts/*": "./scripts/*",
+        "#types/*": "./app/types/*",
+        "#utils/*": "./app/ui/utils/*",
+        "#game-engine": "./app/engine/bridge/index.ts",
+        "#game-engine/*": "./app/engine/bridge/*"
     }
 }
